# SES_DocGuard

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
colab/: SES_DocGuard_Colab.ipynb  setup_colab.sh
configs/: model_config.yaml  tokenizer_config.yaml  training_config.yaml
configs/rules/: README.md  asd_ste_ruleset_example.yaml
configs_examples/: model_config.yaml.example
configs_examples/rules/: asd_ste_rule_example.yaml
data/: processed
data/raw/: annotated_samples  protected
data/raw/glossary/: controlled_vocab.csv
fine_tune_ses_docguard/: data_raw_checksums.txt  deploy  experiments  logs  notebooks  tokenizer
fine_tune_ses_docguard/data/: processed  raw
fine_tune_ses_docguard/models/: base  finetuned
input_pdfs/: (place PDFs here)
notebooks/: SES_DocGuard_Colab.ipynb
runs/: README.md
scripts/: evaluate.sh  run_ingest.sh  train.sh
src/: __init__.py  cli.py  ingest.py
src/evaluator/: __init__.py  metrics.py
src/merger/: __init__.py  results_merger.py
src/model/: __init__.py  trainer.py  transformer.py
src/pdf_ingest/: __init__.py  pdf_parser.py
src/preprocessing/: __init__.py  noise_filters.py  normalizer.py  ocr.py
src/rule_engine/: __init__.py  model_checks.py  yaml_rules.py
src/tokenizer/: __init__.py  bpe_tokenizer.py
src/utils/: __init__.py  checksums.py  io_utils.py  reproducibility.py
src/viz/: __init__.py  attention_viz.py  html_report.py
tests/: test_evaluator.py  test_ingest.py  test_model.py  test_tokenizer.py
tests/rules_tests/: test_asd_ste_rule_stub.py
(+4 files in other folders)
