[tool]
name = "SES-DocGuard"
version = "0.1.0"
description = "A GenAI application for processing technical publications and applying ASD STE rules."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21"
pandas = "^1.3"
torch = "^1.10"
transformers = "^4.12"
scikit-learn = "^0.24"
PyPDF2 = "^1.26"
pytesseract = "^0.3"
opencv-python = "^4.5"
yaml = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"